# course_openmpgpu

./: CMakeLists.txt  README.md  fib_oracle.cpp  fib_stub.cpp
code/: mandel_solved.cpp  parnum.cpp  task1.cpp
gpu/: CMakeLists.txt
gpu/exercises_sol/: CMakeLists.txt  mandel.cu  matrixmul.cu  minmax.cu
gpu/exercises_stub/: mandel_stub.cu  matrixmul_stub.cu  minmax_stub.cu
gpu/samples/: CMakeLists.txt  deviceQuery.txt  helloadd.cu  normthrust.cu
gpucode/: CMakeLists.txt  helloadd.cu  hellodot.cu  mandel_2d.cu
openmp/: CMakeLists.txt
openmp/common/: compute_imagex_offsets.m  imagex.hpp
openmp/exercises_sol/: CMakeLists.txt  fib.cpp  mandel.cpp  mergesort.cpp  qsort.cpp  qsort_common.h  qsort_for.cpp  qsort_par.cpp  qsort_sec.cpp  qsort_task.cpp  treevisit.cpp
openmp/exercises_stub/: CMakeLists.txt  mendel_stub.cpp  mergesort_stub.cpp  pi_stub.cpp  pyrdown.cpp  qsort_stub.cpp
openmp/samples/: CMakeLists.txt  example_openmpimpl.cpp  imio.cpp  parsin.cpp  parsingle.cpp
tbb/: CMakeLists.txt
tbb/examples/: CMakeLists.txt  mergesort.cpp  qsort1.cpp
